# OpenGL_rust

./: Cargo.toml  README.md
assets/shaders/: triangle.frag  triangle.vert
src/: camera.rs  input.rs  main.rs  mesh.rs  resources.rs  shader.rs  vao.rs  vbo.rs
